<resources>
    <string name="app_name">AndroidNewConcepts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_no_filter">No Filter</string>
    <string name="action_geo_code_filter">Search By Geo Code</string>
    <string name="action_address_filter">Search By Address</string>
    <string name="action_establishment_filter">Search By Establishment</string>
    <string name="action_regions_filter">Search By Region</string>
    <string name="action_city_filter">Search By City</string>
    <string name="action_place_picker">Place Picker</string>
    <string name="action_pin_view">PinView</string>
    <string name="alert_consultation_request_sent">Request sent successfully</string>
    <string name="arabic_text">أرسل طلب بنجاح</string>
</resources>
